--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,6 +10,11 @@ on:
         description: 'Log level'     
         required: true
         default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
