--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,3 +23,4 @@ jobs:
     steps:
     - run: |
         echo "Log level: ${{ github.event.inputs.logLevel }}"
+        echo "branch name: ${{GITHUB_REF#refs/heads/}}"
