--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,4 +23,4 @@ jobs:
     steps:
     - run: |
         echo "Log level: ${{ github.event.inputs.logLevel }}"
-        echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        echo "branch name: ${{ github.ref_name }}"
