--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,9 +18,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  printInputs:
+  print & Inputs:
     runs-on: ubuntu-latest
     steps:
-    - run: |
+    - name: Print Inputs
+      run: |
         echo "Log level: ${{ github.event.inputs.logLevel }}"
         echo "branch name: ${{ github.ref_name }}"
