--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,7 +19,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build_and_release:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - name: Print Inputs
       run: |
